--- a/defence.html
+++ b/defence.html
@@ -7,12 +7,19 @@
 </head>
 <body>
   <section>
-    <h1 align="center">Question Paper of Maths</h1>
-    <img src="#">
-    <img src="#">
-    <img src="#">
-    <img src="#">
-    <img src="#">
+    <h1 align="center" id="question-paper-title">Question Paper of Maths</h1>
+    <img src="./imageNo1.jpg" class="question-paper">
+    <img src="./imageNo2.jpg" class="question-paper">
+    <img src="./imageNo3.jpg" class="question-paper">
+    <img src="./imageNo4.jpg" class="question-paper">
+    <img src="./imageNo5.jpg" class="question-paper">
+    <img src="./imageNo6.jpg" class="question-paper">
+    <img src="./imageNo7.jpg" class="question-paper">
+    <img src="./imageNo8.jpg" class="question-paper">
+    <img src="./imageNo9.jpg" class="question-paper">
+    <img src="./imageNo10.jpg" class="question-paper">
+    <img src="./imageNo11.jpg" class="question-paper">
+    <img src="./imageNo12.jpg" class="question-paper">
   </section>
   <script src="logics.js"></script>
 </body>
